черновая версия приложения с одним методом для одной биржи